--- a/stepx/src/main/resources/application.properties
+++ b/stepx/src/main/resources/application.properties
@@ -1,2 +1,14 @@
 spring.application.name=stepx
 spring.mustache.suffix=.html
+
+
+# Configuración de la base de datos
+spring.datasource.url=jdbc:mysql://localhost:3306/stepxDatabase
+spring.datasource.username=root
+spring.datasource.password=admin
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+# Configuración de Hibernate
+spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.show-sql=true
