Create Shoe first version

--- a/stepx/src/main/resources/application.properties
+++ b/stepx/src/main/resources/application.properties
@@ -12,3 +12,12 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql=true
+
+# Enable multipart file uploads
+spring.servlet.multipart.enabled=true
+
+# Set the maximum file size (e.g., 20MB per file)
+spring.servlet.multipart.max-file-size=20MB
+
+# Set the maximum request size (e.g., 50MB total for all files in a single request)
+spring.servlet.multipart.max-request-size=50MB
