--- a/stepx/src/main/resources/application.properties
+++ b/stepx/src/main/resources/application.properties
@@ -21,3 +21,12 @@ spring.servlet.multipart.max-file-size=20MB
 
 # Set the maximum request size (e.g., 50MB total for all files in a single request)
 spring.servlet.multipart.max-request-size=50MB
+
+
+
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=stepxshoeshop@gmail.com
+spring.mail.password=jouh zmkb wpke jtut
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
