--- a/stepx/src/main/resources/application.properties
+++ b/stepx/src/main/resources/application.properties
@@ -21,3 +21,25 @@ spring.servlet.multipart.max-file-size=20MB
 
 # Set the maximum request size (e.g., 50MB total for all files in a single request)
 spring.servlet.multipart.max-request-size=50MB
+logging.level.org.springframework.web=DEBUG
+logging.level.org.springframework.security=DEBUG
+logging.level.root=INFO
+logging.level.com.stepx=DEBUG
+
+
+# Configuración de acceso HTTPS
+server.port = 8443
+server.ssl.key-store = classpath:keystore.jks
+server.ssl.key-store-password = secret
+server.ssl.key-store-type = JKS
+server.ssl.key-alias = selfsigned
+server.ssl.enabled = true 
+
+server.servlet.encoding.charset=UTF-8 
+server.servlet.encoding.enabled=true
+server.servlet.encoding.force=true
+
+spring.jpa.properties.hibernate.format_sql=true
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+
