--- a/stepx/src/main/resources/application.properties
+++ b/stepx/src/main/resources/application.properties
@@ -5,7 +5,7 @@ spring.mustache.suffix=.html
 # Configuración de la base de datos
 spring.datasource.url=jdbc:mysql://localhost:3306/stepxDatabase
 spring.datasource.username=root
-spring.datasource.password=admin
+spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # Configuración de Hibernate
