--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -142,6 +142,14 @@
             <version>9.1.22</version>
         </dependency>
 
+        <!--Dependencies for mappers-->
+
+        <dependency>
+			<groupId>org.mapstruct</groupId>
+			<artifactId>mapstruct</artifactId>
+			<version>1.6.3</version>
+		</dependency>
+
 
     </dependencies>
 
