BasictDTOS to avoid circular relations, two restControllers and more

--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -150,6 +150,12 @@
         </dependency>
 
 
+    
+      <dependency>
+        <groupId>org.jboss.errai</groupId>
+        <artifactId>errai-common</artifactId>
+        <version>4.6.0.Final</version>
+      </dependency>
     </dependencies>
 
     <build>
