--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -33,10 +33,11 @@
         <tag />
         <url />
     </scm>
-
-    <properties>
-        <java.version>21</java.version>
-    </properties>
+<properties>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<java.version>21</java.version>
+		<jjwt.version>0.12.6</jjwt.version>
+	</properties>
 
     <dependencies>
         <dependency>
@@ -156,6 +157,24 @@
         <artifactId>errai-common</artifactId>
         <version>4.6.0.Final</version>
       </dependency>
+<dependency>
+			<groupId>io.jsonwebtoken</groupId>
+			<artifactId>jjwt-api</artifactId>
+			<version>${jjwt.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>io.jsonwebtoken</groupId>
+			<artifactId>jjwt-impl</artifactId>
+			<version>${jjwt.version}</version>
+			<scope>runtime</scope>
+		</dependency>
+		<dependency>
+			<groupId>io.jsonwebtoken</groupId>
+			<artifactId>jjwt-jackson</artifactId>
+			<version>${jjwt.version}</version>
+			<scope>runtime</scope>
+		</dependency>
+
     </dependencies>
 
     <build>
