--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,6 +1,12 @@
 spring.application.name=stepx
 spring.mustache.suffix=.html
 
+# Habilitar OpenAPI/Swagger
+springdoc.api-docs.enabled=true
+springdoc.swagger-ui.enabled=true
+springdoc.api-docs.path=/v3/api-docs
+springdoc.swagger-ui.path=/swagger-ui.html
+
 
 # Configuración de la base de datos
 spring.datasource.url=jdbc:mysql://localhost:3306/stepxDatabase
