--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -11,7 +11,7 @@ springdoc.swagger-ui.path=/swagger-ui.html
 # Configuración de la base de datos
 spring.datasource.url=jdbc:mysql://localhost:3306/stepxDatabase
 spring.datasource.username=root
-spring.datasource.password=pass
+spring.datasource.password=admin
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # Configuración de Hibernate
