Conection between backend and frontend, and modal login verifying users in database

--- a/frontend/angular.json
+++ b/frontend/angular.json
@@ -102,6 +102,11 @@
               "src/styles.css"
             ],
             "scripts": []
+          },
+          "serve": {
+            "options": {
+              "proxyConfig": "proxy.conf.json"
+            }
           }
         }
       }
