--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^17.0.0",
+    "@angular/cdk": "^17.3.9",
     "@angular/common": "^17.0.0",
     "@angular/compiler": "^17.0.0",
     "@angular/core": "^17.0.0",
@@ -22,6 +23,7 @@
     "@angular/router": "^17.0.0",
     "@angular/ssr": "^17.0.9",
     "@fortawesome/fontawesome-free": "^6.7.2",
+    "@swimlane/ngx-charts": "^21.1.3",
     "express": "^4.18.2",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
