--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,19 +23,24 @@
     "@angular/router": "^17.0.0",
     "@angular/ssr": "^17.0.9",
     "@fortawesome/fontawesome-free": "^6.7.2",
+    "@ng-bootstrap/ng-bootstrap": "^16.0.0",
     "@swimlane/ngx-charts": "^21.1.3",
     "express": "^4.18.2",
     "rxjs": "~7.8.0",
+    "swiper": "^11.2.6",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.2"
   },
   "devDependencies": {
+    "@angular-devkit/architect": "^0.1700.0",
     "@angular-devkit/build-angular": "^17.0.9",
+    "@angular-devkit/core": "^17.3.0",
     "@angular/cli": "^17.0.9",
     "@angular/compiler-cli": "^17.0.0",
     "@types/express": "^4.17.17",
     "@types/jasmine": "~5.1.0",
     "@types/node": "^18.18.0",
+    "ajv": "^8.12.0",
     "jasmine-core": "~5.1.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
