--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,6 +26,7 @@
     "@ng-bootstrap/ng-bootstrap": "^16.0.0",
     "@swimlane/ngx-charts": "^21.1.3",
     "express": "^4.18.2",
+    "js-cookie": "^3.0.5",
     "rxjs": "~7.8.0",
     "swiper": "^11.2.6",
     "tslib": "^2.3.0",
@@ -39,6 +40,7 @@
     "@angular/compiler-cli": "^17.0.0",
     "@types/express": "^4.17.17",
     "@types/jasmine": "~5.1.0",
+    "@types/js-cookie": "^3.0.6",
     "@types/node": "^18.18.0",
     "ajv": "^8.12.0",
     "jasmine-core": "~5.1.0",
