--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,57 +1,79 @@
+# ======================
+# Configuración básica
+# ======================
 spring.application.name=stepx
+server.port=8443
+server.servlet.encoding.charset=UTF-8
+server.servlet.encoding.enabled=true
+server.servlet.encoding.force=true
+
+# ======================
+# Configuración HTTPS/SSL
+# ======================
+server.ssl.enabled=true
+server.ssl.key-store=classpath:keystore.jks
+server.ssl.key-store-password=secret
+server.ssl.key-store-type=JKS
+server.ssl.key-alias=selfsigned
+
+# ======================
+# Configuración de base de datos
+# ======================
+spring.datasource.url=jdbc:mysql://localhost:3306/stepxDatabase?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
+spring.datasource.username=root
+spring.datasource.password=admin
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+# ======================
+# Configuración JPA/Hibernate
+# ======================
+spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.jdbc.batch_size=30
+spring.jpa.properties.hibernate.order_inserts=true
+spring.jpa.properties.hibernate.order_updates=true
+
+# ======================
+# Configuración de plantillas
+# ======================
 spring.mustache.suffix=.html
 
-# Habilitar OpenAPI/Swagger
+# ======================
+# Configuración de Swagger/OpenAPI
+# ======================
 springdoc.api-docs.enabled=true
 springdoc.swagger-ui.enabled=true
 springdoc.api-docs.path=/v3/api-docs
 springdoc.swagger-ui.path=/swagger-ui.html
 
-
-# Configuración de la base de datos
-spring.datasource.url=jdbc:mysql://localhost:3306/stepxDatabase
-spring.datasource.username=root
-spring.datasource.password=admin
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-
-# Configuración de Hibernate
-spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
-spring.jpa.hibernate.ddl-auto=create-drop
-spring.jpa.show-sql=true
-
-# Enable multipart file uploads
+# ======================
+# Configuración de subida de archivos
+# ======================
 spring.servlet.multipart.enabled=true
-
-# Set the maximum file size (e.g., 20MB per file)
 spring.servlet.multipart.max-file-size=20MB
-
-# Set the maximum request size (e.g., 50MB total for all files in a single request)
 spring.servlet.multipart.max-request-size=50MB
+
+# ======================
+# Configuración de logging
+# ======================
+logging.level.root=INFO
 logging.level.org.springframework.web=DEBUG
 logging.level.org.springframework.security=DEBUG
-logging.level.root=INFO
 logging.level.com.stepx=DEBUG
-
-# Configuración de acceso HTTPS
-server.port = 8443
-server.ssl.key-store = classpath:keystore.jks
-server.ssl.key-store-password = secret
-server.ssl.key-store-type = JKS
-server.ssl.key-alias = selfsigned
-server.ssl.enabled = true 
-
-server.servlet.encoding.charset=UTF-8 
-server.servlet.encoding.enabled=true
-server.servlet.encoding.force=true
-
-spring.jpa.properties.hibernate.format_sql=true
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 
+# ======================
+# Configuración de correo electrónico
+# ======================
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 spring.mail.username=stepxshoeshop@gmail.com
 spring.mail.password=jouh zmkb wpke jtut
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
-
+spring.mail.properties.mail.smtp.connectiontimeout=5000
+spring.mail.properties.mail.smtp.timeout=5000
+spring.mail.properties.mail.smtp.writetimeout=5000
