docker working, fixed singleprod, fixed create image script

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -54,4 +54,5 @@ spring.mail.username=stepxshoeshop@gmail.com
 spring.mail.password=jouh zmkb wpke jtut
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mvc.pathmatch.matching-strategy=ant-path-matcher 
 
