--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -19,8 +19,8 @@ RUN npm ci --no-optional --no-audit --progress=false
 # 4. Copiar el resto del código fuente
 COPY frontend/ ./
 
-# 5. Instalar file-saver y sus tipos
-RUN npm install file-saver @types/file-saver --save
+# # 5. Instalar file-saver y sus tipos
+RUN npm install 
 
 # 6. Modificar angular.json de forma segura
 RUN echo 'Modificando angular.json...' && \
