--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,7 +26,9 @@
     "@fortawesome/fontawesome-free": "^6.7.2",
     "@ng-bootstrap/ng-bootstrap": "^16.0.0",
     "@swimlane/ngx-charts": "^21.1.3",
+    "@types/file-saver": "^2.0.7",
     "express": "^4.18.2",
+    "file-saver": "^2.0.5",
     "js-cookie": "^3.0.5",
     "rxjs": "~7.8.0",
     "swiper": "^11.2.6",
