--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -74,6 +74,7 @@ spring.mail.username=stepxshoeshop@gmail.com
 spring.mail.password=jouh zmkb wpke jtut
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mvc.pathmatch.matching-strategy=ant-path-matcher 
 spring.mail.properties.mail.smtp.connectiontimeout=5000
 spring.mail.properties.mail.smtp.timeout=5000
 spring.mail.properties.mail.smtp.writetimeout=5000
