--- a/docker/docker-compose.yaml
+++ b/docker/docker-compose.yaml
@@ -2,18 +2,16 @@ version: '3.8'
 
 services:
   app:
-    build:
-      context: .
-      dockerfile: Dockerfile
+    image: gabim23/prueba12:latest
     container_name: springboot-app
     environment:
       SPRING_DATASOURCE_URL: jdbc:mysql://mysql:3306/stepxDatabase?useSSL=false&allowPublicKeyRetrieval=true
       SPRING_DATASOURCE_USERNAME: root
       SPRING_DATASOURCE_PASSWORD: pass
-      SPRING_JPA_HIBERNATE_DDL_AUTO: update
+      SPRING_JPA_HIBERNATE_DDL_AUTO: create-drop #update antes
       SPRING_SERVER_PORT: 8443
     ports:
-      - "443:8443"
+      - "8443:8443"
     depends_on:
       mysql:
         condition: service_healthy
