--- a/docker/docker-compose.yaml
+++ b/docker/docker-compose.yaml
@@ -2,12 +2,13 @@ version: '3.8'
 
 services:
   app:
-    image: gabim23/prueba12:latest
+    image: gabim23/prueba34:latest
     container_name: springboot-app
     environment:
       SPRING_DATASOURCE_URL: jdbc:mysql://mysql:3306/stepxDatabase?useSSL=false&allowPublicKeyRetrieval=true
       SPRING_DATASOURCE_USERNAME: root
       SPRING_DATASOURCE_PASSWORD: pass
+      SPRING_MAIL_PASSWORD: "tuec lbpt fppw evxs"
       SPRING_JPA_HIBERNATE_DDL_AUTO: create-drop #update antes
       SPRING_SERVER_PORT: 8443
     ports:
